# CapybaraLauncher

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakeLists.txt.user.RKFlFe  LICENSE.md  README.md  WH3_Mod_Menager.qmlproject  WH3_Mod_Menager.qmlproject.qtds  main.qml  qmlmodules  update.bat
content/: App.qml  BottomGameMenu.qml  CMakeLists.txt  InfoBox.qml  InfoPopup.qml  ModsListFile.qml  RightPanel.qml  Screen01.ui.qml  SettingsModule.qml  TopMenu.qml  gameselector.qml
content/images/: POLaF.xcf  POLbF.xcf
content/qml/: App.qml  Article.qml  Article.qml.autosave  ArticleView.qml  BottomGameMenu.qml  GameSelector.qml  InfoBox.qml  ModsListFile.qml  RightPanel.qml  SettingsModule.qml  TopMenu.qml
content/qml/bottomMenu/: ModListsOptions.qml  TaskList.qml
content/qml/customModules/: CustomButton.qml  DescriptionBox.qml
content/qml/modsList/: ModsListFile.qml  ModsList_AllModsMenu.qml  ModsList_ClickMenu.qml  ModsList_Right.qml  ModsList_Settings.qml  ModsList_Top.qml
content/resources/: capybaraIcon.rc  capybaraIcon.res
gameconnector/: gameconnectorservice.cpp  gameconnectorservice.h  main.cpp  steamapiaccess.cpp  steamapiaccess.h
imports/: CMakeLists.txt  repos - Shortcut.lnk
imports/WH3_Mod_Menager/: CMakeLists.txt  qmldir
imports/WH3_Mod_Menager/designer/: plugin.metainfo
src/: cmodslistfile.cpp  cmodslistfile.h  cmodslistfilling.cpp  cmodslistfilling.h  exit.cpp  exit.h  globaldata.cpp  globaldata.h  import_qml_plugins.h  localfiles.cpp  localfiles.h  main.cpp  modpackscontent.cpp  modpackscontent.h  modpackslist.cpp  modpackslist.h  qtgeneralbackend.cpp  qtgeneralbackend.h  sortingmodlist.h  steamtools.cpp  steamtools.h  windowsfunctions.cpp  windowsfunctions.h
src/github/: githubnews.cpp  githubnews.h  githubupdater.cpp  githubupdater.h
src/localfiles/: localfiles.cpp  localmods.cpp  localmods.h
src/private/: gameschanger.cpp  gameschanger.h  serverconnection.cpp  serverconnection.h
src/qt/: settingsmodule.cpp  settingsmodule.h
src/qt/customModules/: communitynews.cpp  communitynews.h  gamechanger.cpp  gamechanger.h  infobox.cpp  infobox.h  modpackslist.cpp  modpackslist.h  modslistfile.cpp  modslistfile.h  news.cpp  news.h  tasklist.cpp  tasklist.h
src/qt/webEngineBackend/: webenginebackend.cpp  webenginebackend.h
src/steamapi/: epicsupport.cpp  epicsupport.h  gameconnectorsharedmemory.cpp  gameconnectorsharedmemory.h  steamapiaccess.cpp  steamapiaccess.h
src/system/: windowsfunctions.cpp
src/utility/: filesoperations.cpp  filesoperations.h  loggingsystem.cpp  loggingsystem.h  threadsoperations.cpp  threadsoperations.h  utility.cpp  utility.h
